fix modal images on small screens

--- a/style.css
+++ b/style.css
@@ -153,8 +153,8 @@ div.modal {
 }
 
 img.screenshot {
-	max-width: 400px;
-	margin: 10px;
+	max-width: 100%;
+	width: 400px;
 }
 
 /* === contact === */
